# customer-segmentation-kmeans

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
data/: marketing_campaign2.csv  marketing_campaign_final.csv
deployment/: README.txt  kmeans.py  requirements.txt
notebooks/: EDA.ipynb  README.txt  app.py  cluster_mapping.pkl  clustered_marketing_campaign.csv  clustering.py  kmeans.pkl  marketing_campaign_final.csv  model.ipynb  model_testing.ipynb  pca.pkl  requirements.txt  scaler.pkl
project_cs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
